# dog_and_cat_classifier_cnn_from_scratch

./: .gitignore  Dockerfile  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-docker.txt  requirements.txt
api/: main.py
dog_and_cat_classifier_cnn_from_scratch/: data.py  debug.py  generate_data.py  model.py  output.txt  test.py  train.py
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: action-button.tsx
frontend/src/routes/: __root.tsx  blog.tsx  index.tsx
models/: best_model_20250913_171755.pth  best_model_20250913_173059.pth  final_model_20250915_092314.pth  models.py
nginx/conf/: app.conf
notebooks/: 1.0-building-blocks.ipynb  2.0-cnn-layer.ipynb  3.0-resnet-architecture.ipynb  4.0-data-cleaning-and-collection.ipynb  5.0-training.ipynb  custom_base.tex.j2  jupyter.tex.j2
notebooks/lightning_logs/version_17/: metrics.csv
notebooks/lightning_logs/version_18/: metrics.csv
notebooks/lightning_logs/version_23/: metrics.csv
notebooks/lightning_logs/version_28/: metrics.csv
notebooks/lightning_logs/version_30/: metrics.csv
notebooks/lightning_logs/version_31/: metrics.csv
notebooks/lightning_logs/version_32/: metrics.csv
notebooks/lightning_logs/version_33/: metrics.csv
notebooks/lightning_logs/version_34/: metrics.csv
notebooks/lightning_logs/version_35/: metrics.csv
notebooks/lightning_logs/version_36/: metrics.csv
resnet_from_scratch/: model.py
(+50 files in other folders)
