[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dog_and_cat_classifier_cnn_from_scratch"
version = "0.0.1"
description = "Dog and Cat Classifier using ResNet architecture"
authors = [
  { name = "Evan Ly" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["dog_and_cat_classifier_cnn_from_scratch"]
include = ["pyproject.toml", "dog_and_cat_classifier_cnn_from_scratch/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["dog_and_cat_classifier_cnn_from_scratch"]
force-sort-within-sections = true

